--- a/index.html
+++ b/index.html
@@ -10,27 +10,50 @@
 <body>
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="/" id="navbar_logo">Home</a>
+            <a 
+                href="/index.html" 
+                id="navbar_logo">Home
+            </a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
-                <span class="bar"></span>
+                <span class="bar"></sxpan>
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Projects</a>
+                    <a href="/aboutme.html" class="navbar_links">About Me</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="/travel.html" class="navbar_links">Travel</a>
                 </li>
                 <li class="navbar_item">
                     <a href="/mindmatters.html" class="navbar_links">Mind Matters</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Travel</a>
+                    <a href="/projects.html" class="navbar_links">Projects</a>
                 </li>
                 <li class="navbar_button">
-                    <a href="/" class="button">Contact Me</a>
+                    <a href="/contactme.html" class="button">Contact Me</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <!--Intro Section-->
+    <div class="main">
+        <div class="main_container">
+            <div class="main_content">
+                <h1>WELCOME</h1>
+                <h2>TO MY WEBSITE</h2>
+                <p>Come learn a little about me!</p>
+                <button class="main_button">
+                    <a href="/aboutme.html">About Me</a>
+                </button>
+            </div>
+            <div class="main_image_container">
+                <img src="images/intro.png" alt="Dishita Shetty" class="intro_image" />
+            </div>
+        </div>
+    </div>
+    <script src = "app.js"></script> 
 </body>
 </html>
